# Vode

./: .gitignore  CLI_FEATURES.md  CURRENT_STATE.md  FEATURE_FUSION.md  PIPELINE_ANALYSIS.md  README.md  TODO.md  VERSION_COMPARISON.md  __init__.py  asdasd.json  complete_nested_dataflow.d2  complete_nested_dataflow.gv  debug_edges.py  debug_nested.py  introduction.md  pyproject.toml  regenerate_graphs.py  simple.gv  simple_trace.json  test_adapter.py  test_cli_example.py  test_debug.py  test_depth_fix.py  test_io_nodes.py  test_loop_detection.py  test_nested_fix.py  trace.json
capture/: __init__.py  dynamic_capture.py
core/: graph.py  nodes.py  utils.py
docs/: 01_FEATURES.md  02_TECHNICAL_ROADMAP.md  03_ARCHITECTURE.md
docs/stage1/: analysis.md  report.md  todo.md
docs/stage2/: capabilities.md  design.md  quickstart.md  report.md  todo.md
docs/stage3/: architecture.md  capture_mechanism.md  data_format.md  node_design.md  overview.md  rendering.md
docs/stage4/: redesign.md
examples/: README.md  advanced_example.py  cli_test_complex.py  cli_test_simple.py  complete_example.py  complex_example.py  dataflow_capture_example.py  large_model_example.py  simple_example.py  visualize_example.py
plans/: 01_FEATURES.md
src/vode/: __init__.py  __main__.py  cli.py
src/vode/capture/: __init__.py  base.py  computation_tracer.py  dynamic_capture.py  function_tracer.py  hooks.py  recorder_tensor.py  static_capture.py
src/vode/core/: __init__.py  nodes.py  serializer.py  types.py  validator.py
src/vode/nn/: __init__.py  visualize.py
src/vode/nn/capture/: __init__.py  dataflow_capture.py  recorder_tensor.py  structure_capture.py
src/vode/trace/: __init__.py  dataflow_resolver.py  models.py  renderer.py  serializer.py  tracer.py  value_extractor.py
src/vode/view/: __init__.py  adapters.py  api.py  server.py
src/vode/visualize/: __init__.py  graphviz_renderer.py  routes.py  server.py  vode_wrapper.py
test_outputs/: cli_test_complex_static_structure.gv  cli_test_simple_static_structure.gv  test_dynamic.gv  test_nested.gv  test_simple.gv  unifolm_static_d5.gv
tests/: README.md  __init__.py  run_tests.py  test_cli.py  test_core_nodes.py  test_dynamic_capture.py  test_integration.py  test_loop_detection.py  test_renderer.py  test_stage2_integration.py  test_stage3_integration.py  test_stage4_capture.py  test_stage4_renderer.py  test_static_capture.py  test_unifolm.py  test_view_server.py  test_visualization.py
tests/level_1_basic/: simple_functions.py
tests/level_2_simple_nn/: linear_model.py
tests/level_3_medium_nn/: nested_networks.py
tests/level_4_complex_nn/: advanced_architectures.py
tests/level_5_real_world/: README.py
visualize/: graphviz_renderer.py  visualizer.py
(+23 files in other folders)
