[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vode"
version = "0.1.0"
description = "Visualization and Debugging Environment for PyTorch neural networks"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "VODE Contributors"}
]
license = {text = "MIT"}
keywords = ["pytorch", "visualization", "neural-networks", "debugging", "graphviz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]
viz = ["graphviz>=0.20.0"]  # Python graphviz bindings for rendering

[project.scripts]
vode = "vode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]